War Tracking & Login API's commit
